--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
             <h5 class="card-body"> Moderations und Präsentationstechniken </h5>
           </div>
           <h1 class="ls-tight display-6 mb-5 pt-5">In Progress</h1>
-          <div class="card text-white">
-            <h5 class="card-body"> Projektmanagement Basiszertifikat (IPMA) (11/2022) </h5>
-          </div>
+          <!--<div class="card text-white">
+            <h5 class="card-body"></h5>
+          </div> -->
         </div>
 
         <div class="col-12 col-lg-6 ms-lg-auto">
