--- a/html/pages/homeassistant_project.html
+++ b/html/pages/homeassistant_project.html
@@ -24,14 +24,18 @@
     <div class="container_ref">
       <div class="row justify-content-center">
         <div class="col-auto">
-          <a class="a_ref" href="../../index.html">
-            <h1 class="text_ref">Profile</h1>
-          </a>
+          <div class="card_Ac">
+            <a class="a_ref" href="../../index.html">
+              <h1 class="text_navlink p-2 m-2"> Profile </h1>
+            </a>
+          </div>
         </div>
         <div class="col-auto">
-          <a class="a_ref" href="../pages/projects.html">
-            <h1 class="text_ref">Projects</h1>
-          </a>
+          <div class="card_NavDeac">
+            <a class="a_ref" href="./projects.html">
+              <h1 class="text-white p-2 m-2">Projects</h1>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -44,7 +48,7 @@
     </h1>
 
     <div class="m-3 p-4">
-      <img src="../../img/homeassistant/hahome.png" class="d-block w-100 rounded2" alt="...">
+      <img src="../../img/homeassistant/HomAD.png" class="d-block w-100 rounded2" alt="...">
     </div>
 
     <div class="card m-5 card_pr">
