--- a/html/pages/nudelcloud_project.html
+++ b/html/pages/nudelcloud_project.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NudelSearch</title>
+  <title>NudelCloud</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -40,27 +40,35 @@
       </div>
     </div>
 
+
     <h1 class="header1">
-      Nudelsearch
+      NudelCloud
     </h1>
     <h1 class="header2">
-      Privacy Search Engine
+      Privacy Cloud
     </h1>
 
+    
     <div id="carouselExampleDark" class="carousel carousel-dark slide m-5" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../../img/nudelsearch/nudelsearch_home.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/Nudelcloud/Cloud Login.png" class="d-block w-100 rounded2" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../../img/nudelsearch/nudelsearch_search.png" class="d-block w-100 rounded2" alt="...">
+          <img src="../../img/Nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../../img/Nudelcloud/CloudFiles.png" class="d-block w-100 rounded2" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -77,7 +85,7 @@
     <div class="card m-5 card_pr">
       <h5 class="card-header header_pr">Online Instance</h5>
       <div class="card-body">
-        <p class="card-text"><a href="https://search.philoklemenz.de/">search.philoklemenz.de/</a>
+        <p class="card-text"><a href="https://search.philoklemenz.de/">cloud.philoklemenz.de/</a>
         </p>
       </div>
     </div>
@@ -86,10 +94,11 @@
       <h5 class="card-header header_pr">About the Project</h5>
       <div class="card-body">
         <h5 class="card-title">Task</h5>
-        <p class="card-text">With this little project, I have deployed my own search engine based on Searchxng.
+        <p class="card-text">With this little project, I have deployed my own cloud based on Nextcloud.
         </p>
         <h5 class="card-title">Functionality</h5>
-        <p class="card-text">At the Moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy it
+        <p class="card-text">At the Moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy
+          it
           on my Raspberry Pi. Due to problems with my fritz box, this has to wait. Even though the performance of this
           engine is not the same as googles engine, but has the big benefit of full privacy. Furthermore, this machine
           shows
@@ -104,17 +113,15 @@
     <div class="card m-5 card_pr">
       <h5 class="card-header header_pr">Source Project</h5>
       <div class="card-body">
-        <div class="card-body">
-          <h5 class="card-title">Wiki</h5>
-          <p class="card-text"><a href="https://docs.searxng.org/" style="text-decoration: none;">docs.searxng.org/</a>
-          </p>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">GitHub</h5>
-          <p class="card-text"><a href="https://github.com/searxng"
-              style="text-decoration: none;">github.com/searxng</a>
-          </p>
-        </div>
+        <h5 class="card-title">Source Project</h5>
+        <p class="card-text"><a href="https://nextcloud.com/" style="text-decoration: none;">https://nextcloud.com/</a>
+        </p>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">GitHub</h5>
+        <p class="card-text"><a href="https://github.com/nextcloud/server"
+            style="text-decoration: none;">https://github.com/nextcloud/server</a>
+        </p>
       </div>
     </div>
 
@@ -122,55 +129,57 @@
       <h5 class="card-header header_pr">Components</h5>
       <div class="card-body">
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Python</h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 m-3">PHP</h3>
           <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:70.1%" aria-valuenow="70.1" aria-valuemin="0"
-              aria-valuemax="100">70.1%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:12.8%" aria-valuenow="12.8" aria-valuemin="0"
-              aria-valuemax="100">12.8%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">HTML</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:6.4%" aria-valuenow="6.4" aria-valuemin="0"
-              aria-valuemax="100">6.4%</div>
-          </div>
-        </div>
-        <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Less</h3>
-          <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:5.7%" aria-valuenow="5.7" aria-valuemin="0"
-              aria-valuemax="100">5.7%</div>
+            <div class="progress-bar" role="progressbar" style="--value:61.0%" aria-valuenow="60.1" aria-valuemin="0"
+              aria-valuemax="100">61.0%</div>
           </div>
         </div>
         <div>
           <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
           <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:3.0%" aria-valuenow="3.0" aria-valuemin="0"
-              aria-valuemax="100"></div>
-            <div class="px-2">3.0%</div>
+            <div class="progress-bar" role="progressbar" style="--value:34.1%" aria-valuenow="34.1" aria-valuemin="0"
+              aria-valuemax="100">34.1%</div>
           </div>
         </div>
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Vue</h3>
           <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:1.1%" aria-valuenow="1.1" aria-valuemin="0"
+            <div class="progress-bar" role="progressbar" style="--value:2.1%" aria-valuenow="2.1" aria-valuemin="0"
               aria-valuemax="100"></div>
-            <div class="px-2">1.1%</div>
+            <div class="px-2">2.1%</div>
+          </div>
+        </div>
+        <div>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Gherkin</h3>
+          <div class="progress m-3">
+            <div class="progress-bar" role="progressbar" style="--value:1.4%" aria-valuenow="1.4" aria-valuemin="0"
+              aria-valuemax="100"></div>
+            <div class="px-2">1.4%</div>
+          </div>
+        </div>
+        <div>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">SCSS</h3>
+          <div class="progress m-3">
+            <div class="progress-bar" role="progressbar" style="--value:0.6%" aria-valuenow="0.6" aria-valuemin="0"
+              aria-valuemax="100"></div>
+            <div class="px-2">0.6%</div>
+          </div>
+        </div>
+        <div>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
+          <div class="progress m-3">
+            <div class="progress-bar" role="progressbar" style="--value:0.3%" aria-valuenow="0.3" aria-valuemin="0"
+              aria-valuemax="100"></div>
+            <div class="px-2">0.3%</div>
           </div>
         </div>
         <div>
           <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
           <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:0.9%%" aria-valuenow="0.9" aria-valuemin="0"
+            <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.5" aria-valuemin="0"
               aria-valuemax="100"></div>
-            <div class="px-2">0.9%</div>
+            <div class="px-2">0.5%</div>
           </div>
         </div>
       </div>
