--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -21,22 +21,22 @@
         </div>
         <div class="container_ref">
             <div class="row justify-content-center">
-              <div class="col-auto">
-                <div class="card_Ac">
-                  <a class="a_ref" href="../../index.html">
-                    <h1 class="text_navlink p-2 m-2"> Profile </h1>
-                  </a>
+                <div class="col-auto">
+                    <div class="card_Ac">
+                        <a class="a_ref" href="../../index.html">
+                            <h1 class="text_navlink p-2 m-2"> Profile </h1>
+                        </a>
+                    </div>
                 </div>
-              </div>
-              <div class="col-auto">
-                <div class="card_NavDeac">
-                  <a class="a_ref" href="./projects.html">
-                    <h1 class="text-white p-2 m-2">Projects</h1>
-                  </a>
+                <div class="col-auto">
+                    <div class="card_NavDeac">
+                        <a class="a_ref" href="./projects.html">
+                            <h1 class="text-white p-2 m-2">Projects</h1>
+                        </a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
+        </div>
 
         <h1 class="header1">Projects</h1>
 
@@ -45,7 +45,7 @@
                 <a class="a_ref" href="./trintel_project.html">
                     <div class="card card_pr">
                         <img src="../../img/trintelV4_transparentB.jpg" class="img_pr"
-                        alt="Hollywood Sign on The Hill" />
+                            alt="Hollywood Sign on The Hill" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -75,8 +75,29 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                This is my bachelors thesis and will be supplying the Seehafen Kiel with a toolkit for documenting their
+                                This is my bachelors thesis and will be supplying the Seehafen Kiel with a toolkit for
+                                documenting their
                                 processes with AR Components.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a class="a_ref" href="./nudelcloud_project.html">
+                    <div class="card card_pr">
+                        <img src="../../img/nudelcloud.png" class="img_pr" alt="Skyscrapers" />
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">Nudelcloud</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <p class="text_pr">
+                                My own public search engine based on searnxg. I deployed this solution due to privacy
+                                concerns.
                             </p>
                         </div>
                     </div>
@@ -113,7 +134,8 @@
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i></div>
                             </div>
-                            <p class="text_pr">A web page built from scratch to return to HTML & CSS. Furthermore I learned about DNS management.</p>
+                            <p class="text_pr">A web page built from scratch to return to HTML & CSS. Furthermore I
+                                learned about DNS management.</p>
                         </div>
                     </div>
                 </a>
