--- a/html/pages/youstage_project.html
+++ b/html/pages/youstage_project.html
@@ -24,18 +24,21 @@
     <div class="container_ref">
       <div class="row justify-content-center">
         <div class="col-auto">
-          <a class="a_ref" href="../../index.html">
-            <h1 class="text_ref">Profile</h1>
-          </a>
+          <div class="card_Ac">
+            <a class="a_ref" href="../../index.html">
+              <h1 class="text_navlink p-2 m-2"> Profile </h1>
+            </a>
+          </div>
         </div>
         <div class="col-auto">
-          <a class="a_ref" href="../pages/projects.html">
-            <h1 class="text_ref">Projects</h1>
-          </a>
+          <div class="card_NavDeac">
+            <a class="a_ref" href="./projects.html">
+              <h1 class="text-white p-2 m-2">Projects</h1>
+            </a>
+          </div>
         </div>
       </div>
     </div>
-
     <h1 class="header1">
       Youstage
     </h1>
