--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="col-auto">
-          <div class="card_Ac">
+          <div data-animation="1" class="card_Ac">
             <a class="a_ref" href="/html/pages/projects.html">
               <h1 class="text_navlink p-2 m-2">Projects</h1>
             </a>
@@ -246,6 +246,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+  <script src="/html/functions/pageAnimations.js"></script>
 </body>
 
 </html>
